@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <plugin>
-	<name>sms_autorespond</name>
-	<alias>SMS Autorespond</alias>
-	<description>SMS Autorespond</description>
-	<release>1</release>
-	<date>2015-11-05</date>
+	<name>autorespond</name>
+	<alias>Autorespond</alias>
+	<description>SMS autorespond</description>
+	<release>2</release>
+	<date>2015-11-29</date>
 	<author>Anton Raharja</author>
 	<language_file>1</language_file>
 	<sql_file>0</sql_file>
